--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -1,6 +1,8 @@
-<resources>
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="android:windowBackground">@color/background</item>
+<resources xmlns:tools="http://schemas.android.com/tools">
+    <style name="AppTheme">
+        <item name="android:navigationBarColor" tools:targetApi="lollipop">@color/black</item>
+        <item name="android:windowActionBar">false</item>
+        <item name="android:windowNoTitle">true</item>
         <item name="android:windowExitAnimation">@android:anim/fade_out</item>
         <item name="android:windowBackground">@drawable/launch_screen_bitmap</item>
     </style>
